<?xml version="1.0" encoding="utf-8"?>

<!-- Credit: Starter code from Udacity ABND Pets App -->

<!-- Layout for the EditorActivity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Title Heading -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/heading_book" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Title Field -->
            <EditText
                android:id="@+id/edit_book_title"
                style="@style/EditTextStyle"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Price Heading -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/heading_price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Price Field -->
            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditTextStyle"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <!-- Quantity Heading -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/heading_quantity" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <!-- Quantity Field -->
            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus_sign"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_book_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus_sign"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier Name Heading -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/heading_supplier_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier Name -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditTextStyle"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier Phone Heading -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <Button
            android:id="@+id/call_supplier_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="CALL"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <!-- Supplier Phone-->
            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditTextStyle"
                android:layout_height="wrap_content"
                android:layout_width="224dp"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
